Implement performance testing features in Jambonz webhook app, including metrics tracking for audio generation methods (streaming and non-streaming). Update ElevenLabs model to 'eleven_turbo_v2' and enhance logging for better debugging. Add endpoints for performance metrics and test mode configuration. Include new audio files in .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ yarn-error.log*
 */.env
 **/.env
 *.env
+audio/10f17659c6f30a1bc7cace8ef50b4d15.mp3
+audio/a558d1fd41104ef619923dd01c18017e.mp3
+audio/e59f2300c1274bf025492858c914a30d.mp3
+audio/e364af6728807370d6e78be0d654b1b9.mp3
+audio/f43f8cb16579e3c12145919b87a38204.mp3
