--- a/jambonz-webhook-app/package.json
+++ b/jambonz-webhook-app/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.12.0",
+    "axios": "^1.11.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.4",
     "morgan": "^1.10.0",
     "openai": "^4.20.0"
   },
