Enhance Jambonz webhook app with updated Docker configurations and improved service health checks. Refined healthcheck commands in docker-compose.yml for Faster-Whisper and Ollama services, added new environment variables for TTS licensing, and optimized audio file management in the application. Updated README.md for clarity on service features and usage instructions. Added new audio files to .gitignore for better project organization.

--- a/OpenSourceVoice/Dockerfile
+++ b/OpenSourceVoice/Dockerfile
@@ -60,7 +60,8 @@ COPY --chown=voiceai:voiceai package*.json ./
 
 # Create required directories with proper permissions
 RUN mkdir -p /app/audio-cache /app/logs && \
-    chown -R voiceai:voiceai /app
+    chown -R voiceai:voiceai /app && \
+    chmod -R 755 /app/audio-cache
 
 # Switch to non-root user
 USER voiceai
