Update .env.example for local testing configurations in Jambonz webhook app. Changed WEBHOOK_BASE_URL, OLLAMA_URL, COQUI_TTS_URL, and FASTER_WHISPER_URL to use host.docker.internal for compatibility with Docker external networking.

--- a/OpenSourceVoice/.env.example
+++ b/OpenSourceVoice/.env.example
@@ -19,7 +19,8 @@ NODE_ENV=production
 
 # Base URL for webhook callbacks (REQUIRED for production)
 # This should be your public domain where Jambonz can reach your server
-WEBHOOK_BASE_URL=https://your-domain.com
+# For local testing, use localhost since Jambonz runs outside Docker network
+WEBHOOK_BASE_URL=https://talk.mvp-scale.com
 
 # Optional: Enable debug logging
 # DEBUG=voice-ai:*
@@ -29,8 +30,8 @@ WEBHOOK_BASE_URL=https://your-domain.com
 # -----------------------------------------------------------------------------
 
 # Ollama (Local LLM) Configuration
-# Default uses Docker internal networking
-OLLAMA_URL=http://ollama:11434
+# Default uses Docker external port networking for compatibility
+OLLAMA_URL=http://host.docker.internal:11435
 
 # Available models (download with: docker exec ollama-container ollama pull <model>)
 # - llama3.1:8b (recommended, 4.7GB, good quality/speed balance)
@@ -41,7 +42,7 @@ OLLAMA_URL=http://ollama:11434
 OLLAMA_MODEL=llama3.1:8b
 
 # Coqui TTS (Text-to-Speech) Configuration
-COQUI_TTS_URL=http://coqui-tts:5002
+COQUI_TTS_URL=http://host.docker.internal:5002
 
 # VITS Speaker Selection (VCTK model speakers)
 # Female voices: p225, p228, p229, p230, p231, p233, p236, p244, p248, p250
@@ -50,7 +51,7 @@ COQUI_TTS_URL=http://coqui-tts:5002
 VITS_SPEAKER_ID=p225
 
 # Faster-Whisper (Speech Recognition) Configuration  
-FASTER_WHISPER_URL=http://faster-whisper:9000
+FASTER_WHISPER_URL=http://host.docker.internal:9000
 
 # -----------------------------------------------------------------------------
 # AUDIO PROCESSING CONFIGURATION
