Update configurations in Jambonz webhook app to enhance Ollama service integration. Changed WEBHOOK_BASE_URL in .env.example for production compatibility, added new environment variables for Ollama model configuration in docker-compose.yml, and improved initialization script for better model loading and health checks. Updated action hooks in voice-app.js to utilize the new environment variable for dynamic URL handling.

--- a/OpenSourceVoice/.env.example
+++ b/OpenSourceVoice/.env.example
@@ -20,7 +20,7 @@ NODE_ENV=production
 # Base URL for webhook callbacks (REQUIRED for production)
 # This should be your public domain where Jambonz can reach your server
 # For local testing, use localhost since Jambonz runs outside Docker network
-WEBHOOK_BASE_URL=https://talk.mvp-scale.com
+WEBHOOK_BASE_URL=https://talk.example.com
 
 # Optional: Enable debug logging
 # DEBUG=voice-ai:*
